# vaip

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .lintrunner.toml  CMakeLists.txt  Copyright.txt  README.md  cmake.sh  debug_env.txt  debug_env.txt.in  gdb.env  linter.yml  requirements-lintrunner.txt  rustfmt.toml
encryption/: CMakeLists.txt
encryption/src/: encryption.cpp  encryption.hpp
onnxruntime_vitis_ai_custom_ops/: CMakeLists.txt  modify_model.py
onnxruntime_vitis_ai_custom_ops/include/: gpa_attention_mask.hpp  onnxruntime_vitis_ai_custom_ops.hpp
onnxruntime_vitis_ai_custom_ops/src/: custom_op_gqa.cpp  custom_op_gqa.hpp  custom_op_gqo.cpp  custom_op_gqo.hpp  custom_op_mha.cpp  custom_op_mha.hpp  custom_op_prefill_gqa.cpp  custom_op_prefill_gqa.hpp  custom_op_rope.cpp  custom_op_rope.hpp  custom_op_slrn.cpp  custom_op_slrn.hpp  custom_op_sslrn.cpp  custom_op_sslrn.hpp  custom_op_ssmlp.cpp  custom_op_ssmlp.hpp  gqa_helper.hpp  main.cpp  matmulnbits_util.hpp  onnxruntime_vitis_ai_custom_ops.def
onnxruntime_vitisai_ep/: CMakeLists.txt  Copyright.txt  README.md  dump_symbol.py  gen_shared_ctx_onnx.py  generate_sym_cpp.py  generate_symbols.cmake  generate_symbols_script.cmake  onnxruntime_vitisai_ep.def.in
onnxruntime_vitisai_ep/cmake/: VitisVersion.cmake  config.cmake.in  generate_op_def.cmake  generate_symbols.cmake  vitis_version.c.in
onnxruntime_vitisai_ep/src/: dummy_main.cpp  main.cpp  symbols.cpp  vaip_symbols.cpp
onnxruntime_vitisai_ep/test/: clone_subgraph.cpp  dump_const.cpp  dump_const_2.cpp  generate_test_cases.cpp  getopt.c  getopt.h  initialize_vaip.hpp  onnx2xir.cpp  onnx_dump_txt.cpp  onnx_grep.cpp  onnx_grep_cxx_pattern.h.inc  onnx_grep_cxx_pattern.mmd  onnx_knife.cpp  onnx_pattern_gen.cpp  onnx_pattern_gen_gtht.cpp  pattern1.json  pattern1.py  test_conv_pattern.py  test_dpu_runner.cpp  test_encryption.cpp  test_get_vaip_path.cpp  test_load_context.cpp  test_py_interpreter.cpp  test_transpose.cpp  voe_py_pass.cpp
ort_vitis_ai_ep/: CMakeLists.txt  opdef.doc  sample1.txt
ort_vitis_ai_ep/test/: Makefile  compile_all.sh  compile_onnx_model.sh  debug_compile_onnx_model.sh  denotation_test.cpp  dontation_test.cpp  dump_const.cpp  execution_provider_test.cpp  generate_model_zoo.sh  learn_partition.cpp  model_zoo.list  models.md  pattern_cached_test.cpp  pattern_test.cpp  pattern_wildcard.cpp  replace_fix_test.cpp  report.txt  resnet50_pt.cpp  rewrite_rule_test.cpp  run_all.sh  run_model.sh  sample_models.hpp  test2onnx.cpp  test_dpu_runner.cpp  test_it.sh  test_main.hpp  test_onnx_runner.cpp  test_p.cpp  xir_ops_test.cpp  xir_ops_test_samples.txt  xmodel_topo.cpp
unit-test/: CMakeLists.txt  README.md  debug_logger.hpp.in  getenv.c  getenv.cpp  main.cpp  unit_test_env.txt  unit_test_env_params.hpp.in  vs.runsettings.in
unit-test/test_onnx_runner/: test_onnx_runner.cpp
unit-test/vaip/: create_sample_onnx_model.py  pt_resnet50_add.h.inc  pt_resnet50_add.mmd  test_anchor_point.cpp  test_config.cpp  test_const_data.cpp  test_constant_initializer.py  test_context.cpp  test_custom_op.py  test_graph.cpp  test_immutable_map.cpp  test_model.cpp  test_node_builder.cpp  test_pass_context.cpp  test_pattern.cpp  test_tarball.cpp
vaip/: CMakeLists.txt  dump_py.py  dump_zip.py  importer.py  install_header.sh  static_py_lib.py
vaip/cmake/: config.cmake.in
vaip/python/: LICENSE  Makefile  README.rst  setup.py
vaip/src/: anchor_point.cpp  anchor_point.proto  anchor_point_imp.cpp  anchor_point_imp.hpp  cache_dir.cpp  cache_dir.hpp  capability.proto  config.cpp  config.hpp  config.proto  custom_op.cpp  dpu_pattern.hpp  file_lock.cpp  file_lock.hpp  graph.cpp  guess_reshape.cpp  model.cpp  node.cpp  node_arg.cpp  node_attrs.cpp  node_input.cpp  pass.cpp  pass_context.proto  pass_context_imp.cpp  pass_context_imp.hpp  pass_imp.cpp  pass_imp.hpp  pattern.proto  plugin.cpp  profile_utils.cpp  profile_utils.hpp  py_zip.cpp.in  py_zip.hpp  qos_updater.hpp  rewrite_rule.cpp  stat.cpp  stat.hpp  static_python_init.hpp  tar_ball.cpp  tar_ball.hpp  (+13 more)
vaip_custom_op_dod/: CMakeLists.txt  symbols.txt
vaip_custom_op_dod/src/: custom_op.cpp  custom_op.hpp  main.cpp  utils.hpp
vaip_custom_op_dpu/: CMakeLists.txt  symbols.txt
vaip_custom_op_dpu/src/: custom_op.cpp  custom_op.hpp  dlanalyzer.cpp  dlanalyzer.hpp  graph_holder.cpp  graph_holder.hpp  main.cpp  ort_tensor_buffer.cpp  ort_tensor_buffer.hpp  schedule.cpp  schedule.hpp
vaip_custom_op_dqcastgather/: CMakeLists.txt  symbols.txt
vaip_custom_op_dqcastgather/src/: custom_op.cpp  custom_op.hpp  main.cpp
vaip_custom_op_gather/: CMakeLists.txt  symbols.txt
vaip_custom_op_gather/src/: custom_op.cpp  custom_op.hpp  main.cpp
vaip_custom_op_gmatmul_integer/: CMakeLists.txt  symbols.txt
vaip_custom_op_gmatmul_integer/src/: custom_op.cpp  custom_op.hpp  main.cpp
vaip_custom_op_matmul_nbits/: CMakeLists.txt  symbols.txt
vaip_custom_op_matmul_nbits/src/: custom_op.cpp  custom_op.hpp  custom_op_mladf.cpp  main.cpp  util.cpp
vaip_custom_op_mlp/: CMakeLists.txt  symbols.txt
vaip_custom_op_mlp/src/: custom_op.cpp  (+2 more)
vaip_custom_op_norm_k/: CMakeLists.txt  symbols.txt
vaip_custom_op_qdqunsqueeze/: CMakeLists.txt  symbols.txt
vaip_custom_op_vaiml/: CMakeLists.txt  symbols.txt
vaip_pass_const_fold_batchnorm_to_scale/: CMakeLists.txt  symbols.txt
vaip_pass_const_fold_transpose/: CMakeLists.txt  symbols.txt
vaip_pass_convert_ending_blacklist_ops_to_unknown_op/: CMakeLists.txt  symbols.txt
vaip_pass_convert_softmax_to_hard_softmax/: CMakeLists.txt  symbols.txt
vaip_pass_create_const_op/: CMakeLists.txt  symbols.txt
vaip_pass_dd_merge_attentionprepro/: CMakeLists.txt  symbols.txt
vaip_pass_dd_merge_dqadd/: CMakeLists.txt  symbols.txt
vaip_pass_dd_merge_dtype/: CMakeLists.txt  symbols.txt
vaip_pass_dd_merge_elwemul/: CMakeLists.txt  symbols.txt
vaip_pass_dd_merge_iconv/: CMakeLists.txt  symbols.txt
vaip_pass_dd_merge_matmul_nbits/: CMakeLists.txt  symbols.txt
vaip_pass_dd_merge_mzdk5mha/: CMakeLists.txt  symbols.txt
vaip_pass_dd_merge_qconcateops/: CMakeLists.txt  symbols.txt
(+1074 files in other folders)
